--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>${kotlin.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>3.2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -110,7 +115,7 @@
           </execution>
         </executions>
         <configuration>
-          <jvmTarget>11</jvmTarget>
+          <jvmTarget>17</jvmTarget>
         </configuration>
       </plugin>
     </plugins>
