--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
       <artifactId>kafka-clients</artifactId>
       <version>3.2.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220320</version>
+    </dependency>
   </dependencies>
 
   <build>
